test/fail/integration/_fail_grammar_lexpr_2.hs
main = do
       let x :: [Int]; x = [2, jl]
       print "hello"